kubernetes/minikube_multi_service_app/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: flask
        image: fefone/backend:v1  # Sostituisci con la tua immagine
        ports:
        - containerPort: 5000  # Porta dell'API Flask

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000      # Porta del Service
      targetPort: 5000  # Porta del container
